--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style-small.css">
-    <link rel="stylesheet" href="styles/style-large.css">
+    <link rel="stylesheet" href="styles/styles-small.css">
+    <link rel="stylesheet" href="styles/styles-large.css">
     <script src="scripts/courses.js" defer></script>
 
 </head>
