--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div class="contenedor">
-            <img class="avatar" src="images/phot1.jpg" alt="Demetrio Aris photo">
+            <img class="avatar" src="images/phot1.jpg" alt="ZAGADOU DAGBAME FRANCK photo">
         </div>
         <h1>ZAGADOU DAGBAME FRANCK</h1>
         <button id="menu" title="Menu"></button>
