--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Home page">
     <meta name="author" content="ZAGADOU DAGBAME FRANCK">
     <link rel="icon" href="images/favorite-favicon.ico">
+    <!--  Essential META Tags -->
+    <meta property="og:title" content="Home | ZAGADOU DAGBAME FRANCK">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/panamaCity-card.jpg">
+    <meta property="og:url" content="https://demetrioaris.github.io/wdd231/index.html">
+    <meta name="twitter:card" content="summary_large_image">
     
     <title>Home | ZAGADOU DAGBAME FRANCK</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
