--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/styles-small.css">
     <link rel="stylesheet" href="styles/styles-large.css">
     <script src="scripts/courses.js" defer></script>
+    <script src="scripts/courses.js" defer></script>
 
 </head>
 
