--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="images/panamaCity-card.jpg">
     <meta property="og:url" content="https://demetrioaris.github.io/wdd231/index.html">
     <meta name="twitter:card" content="summary_large_image">
-    
+
     <title>Home | ZAGADOU DAGBAME FRANCK</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles-small.css">
     <link rel="stylesheet" href="styles/styles-large.css">
-    <script src="scripts/courses.js" defer></script>
+    <script src="scripts/main.js" defer></script>
     <script src="scripts/courses.js" defer></script>
 
 </head>
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="contenedor">
-            <img class="avatar" src="images/phot1.jpg" alt="ZAGADOU DAGBAME FRANCK photo">
+            <img class="avatar" src="images/phot1.jpg" alt="Demetrio Aris photo">
         </div>
         <h1>ZAGADOU DAGBAME FRANCK</h1>
         <button id="menu" title="Menu"></button>
