--- a/index.html
+++ b/index.html
@@ -6,25 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Home page">
     <meta name="author" content="ZAGADOU DAGBAME FRANCK">
-    <link rel="icon" href="images/favorite-favicon.ico">
-    <!--  Essential META Tags -->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+    <!-- Essential META Tags -->
     <meta property="og:title" content="Home | ZAGADOU DAGBAME FRANCK">
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/panamaCity-card.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://demetrioaris.github.io/wdd231/images/panamaCity-card.jpg">
     <meta property="og:url" content="https://demetrioaris.github.io/wdd231/index.html">
     <meta name="twitter:card" content="summary_large_image">
 
     <title>Home | ZAGADOU DAGBAME FRANCK</title>
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Lato&display=swap" rel="stylesheet">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles-small.css">
-    <link rel="stylesheet" href="styles/styles-large.css">
+    <link rel="stylesheet" href="styles/styles-large.css" media="(min-width: 768px)">
+
+    <!-- Scripts -->
     <script src="scripts/main.js" defer></script>
     <script src="scripts/courses.js" defer></script>
 
 </head>
+
 
 <body>
     <header>
